# AbInitio

./: #CMakeLists.txt#  .#CMakeLists.txt  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
docs/: conf.py  index.rst
docs/basis_sets/: basis_set.rst  gaussian.rst  index.rst  slater.rst
docs/geometric/: index.rst  rotor.rst
docs/input/: bs_input.rst  index.rst  input.rst
docs/integrals/: analytic.rst  index.rst  integral_factory.rst  integral_method.rst  numeric.rst
docs/opts/: default_options.rst  index.rst  options.rst
docs/utils/: atom.rst  constants.rst  copyable.rst  electron_configs.rst  index.rst  molecule.rst  polynomial.rst
docs/wavefunction/: index.rst  wavefunction.rst
docs/wavefunction/scf_wfn/: index.rst  scf.rst
integral-workout/: Makefile  fc-ints.tex  hermite.aux  hermite.tex  integrals.aux  integrals.bbl  integrals.bib  integrals.blg  integrals.tex  oc-ints.tex  scratchpad.tex
src/: CMakeLists.txt
src/basis_sets/: #gaussian_orbital.cpp#  .#gaussian_orbital.cpp  CMakeLists.txt  basis_set.hpp  compute.cpp  compute.hpp  electron_configs.cpp  electron_configs.hpp  gaussian_orbital.cpp  polynomial.cpp  polynomial.hpp  polynomial.tcc  slater_orbital.cpp
src/basis_sets/sto-ng/: CMakeLists.txt  sto3g.hpp  stong.cpp  stong.hpp
src/energy/: #CMakeLists.txt#  CMakeLists.txt  energy.cpp  energy.hpp
src/geometric/: CMakeLists.txt  rotor.cpp  rotor.hpp  rotor.pre.cpp
src/input/: CMakeLists.txt  input.cpp  input.hpp  psi4_bs_reader.cpp  psi4_bs_reader.hpp
src/integrals/: CMakeLists.txt  boys.cpp  derivatives.cpp  derivatives.hpp  gaussian.cpp  gaussian.hpp  gaussian_ST.cpp  gaussian_attraction.cpp  gaussian_coulomb.cpp  gaussian_exchange.cpp  gaussian_kinetic.cpp  gaussian_overlap.cpp  gaussian_repulsion-backup2.cpp  gaussian_repulsion.cpp  gaussiansum.cpp  gaussianterm.cpp  integral_factory.template.cpp  integrals.cpp  integrals.hpp  numeric.cpp
src/opts/: CMakeLists.txt  default_options.cpp  default_options.hpp  options.cpp  options.hpp
src/procedure/: CMakeLists.txt  options.cpp
src/scf/: CMakeLists.txt  rhf.hpp  rhf.pre.cpp  scf.cpp  scf.hpp
src/util/: CMakeLists.txt  atom.cpp  atom.hpp  constants.hpp  copyable.hpp  electron_configs.cpp  electron_configs.hpp  molecule.cpp  molecule.hpp  polynomial.cpp  polynomial.hpp  polynomial.template.cpp  tei_array.cpp  tei_array.hpp  vector_ops.cpp  vector_ops.hpp
src/wavefunction/: CMakeLists.txt  wavefunction.cpp  wavefunction.hpp
tests/: CMakeLists.txt  test.h  test_geometric.pre.cpp  test_input.cpp  test_input.pre.cpp  test_integrals.pre.cpp  test_options.cpp  test_orbitals.pre.cpp  test_poly.cpp  test_rhf.pre.cpp  test_sto3g.pre.cpp  test_util.cpp  water.xyz  water2.xyz
