 
cmake_minimum_required(VERSION 3.13)

project(AbInitio)

macro(test_recipe target source)
  if(${ARGC} GREATER 2)
    set(SOURCE_FILE ${ARGV2})
    configure_file(${source} ${ARGV2})
  else()
    set(SOURCE_FILE ${source})
  endif()

  add_executable(${target} ${SOURCE_FILE})
  target_include_directories(${target} PUBLIC ${EXTRAMATH_DIR}/include
    ${LAPACKE_INC_DIR} ${LAPACK_INC_DIR}) 
  # On linux, use valgrind.
  if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    if(LAPACK_LINKER_FLAGS)
      target_link_options(${target} PUBLIC ${LAPACK_LINKER_FLAGS})
    endif()
    if(LAPACKE_LIB_DIR)
      target_link_directories(${target} PUBLIC ${LAPACKE_LIB_DIR} ${EXTRAMATH_DIR}/lib)
    else()
      target_link_directories(${target} PUBLIC ${EXTRAMATH_DIR}/lib)
    endif()
    if(LAPACKE_LIB)
      target_link_libraries(${target} PUBLIC ${MATH} ${LAPACK_LIBRARIES} ${LAPACKE_LIB} extramath abinit gcov)
    else()
      target_link_libraries(${MATH} ${LAPACK_LIBRARIES} extramath abinit gcov)
    endif()
    target_compile_options(${target} PUBLIC --coverage)
    if(VALGRIND)
      add_test(NAME valgrind_${target} COMMAND ${VALGRIND} --leak-check=full
       --show-leak-kinds=all --errors-for-leak-kinds=all --track-origins=yes
       --error-exitcode=1 $<TARGET_FILE:${target}>)
     else()
       add_test(NAME ${target} COMMAND $<TARGET_FILE:${target}>)
     endif()
    add_test(NAME gcov_${target} COMMAND gcov ${source} -m)
  else() # Valgrind doesn't work under windows or mac.
    if(LAPACK_LINKER_FLAGS)
      target_link_options(${target} PUBLIC ${LAPACK_LINKER_FLAGS})
    endif()
    if(LAPACKE_LIB_DIR)
      target_link_directories(${target} PUBLIC ${LAPACKE_LIB_DIR} ${EXTRAMATH_DIR}/lib)
    else()
      target_link_directories(${target} PUBLIC ${EXTRAMATH_DIR}/lib)
    endif()
    if(LAPACKE_LIB)
      target_link_libraries(${target} PUBLIC ${MATH} ${LAPACK_LIBRARIES} ${LAPACKE_LIB} extramath abinit) 
    else()
      target_link_libraries(${target} PUBLIC ${MATH} ${LAPACK_LIBRARIES} extramath abinit)
    endif()
    
    add_test(NAME ${target} COMMAND $<TARGET_FILE:${target}>)
  endif()
  unset(SOURCE_FILE)
endmacro()

test_recipe(test_util test_util.cpp)
test_recipe(test_input test_input.pre.cpp test_input.cpp)
test_recipe(test_geometric test_geometric.pre.cpp test_geometric.cpp)
test_recipe(test_poly test_poly.cpp)
test_recipe(test_orbitals test_orbitals.pre.cpp test_orbitals.cpp)
test_recipe(test_integrals test_integrals.pre.cpp test_integrals.cpp)
test_recipe(test_options test_options.cpp)
